@@ -3,6 +3,10 @@ MComix 0.92 (4.0.5)
     - Fixed a bug that made MComix save preview thumbnails to disk
       even if this behaviour was disabled in the preferences window.
 
+    - Added limited support for password-protected ZIP and RAR archives.
+      For ZIP archives, Python >= 2.6 is required. For RAR archives,
+      only extraction with libunrar/unrar.dll is supported.
+
     - If a library collection has sub-collections, the books from these
       sub-collections will be shown as well when the collection is opened.
 
